prevent user from inputing 2 decimal points

--- a/Split_It/Add_Expense_Pages/AddExpense.xaml
+++ b/Split_It/Add_Expense_Pages/AddExpense.xaml
@@ -558,6 +558,7 @@
 									AcceptsReturn="False" 
 									Hint="0.00"
                                     Width="220"
+                                    KeyDown="tbAmount_KeyDown"
                                     TextChanged="tbAmount_TextChanged"
 									InputScope="Number" BorderThickness="0" Margin="40,0,0,0" FontSize="{StaticResource nameSize}"/>
 							</StackPanel>
