--- a/Split_It/Add_Expense_Pages/AddPayment.xaml
+++ b/Split_It/Add_Expense_Pages/AddPayment.xaml
@@ -54,7 +54,7 @@
 					<TextBlock Foreground="Black" Text="Paid" FontSize="{StaticResource amountSize}" HorizontalAlignment="Center" Margin="-10,0,0,0"/>
 					<StackPanel Orientation="Horizontal" Margin="0,-15,0,0">
 						<TextBlock x:Name="tbCurrency" Text="SGD" Foreground="Black" FontSize="{StaticResource amountSize}" FontWeight="Bold" VerticalAlignment="Center"/>
-						<TextBox x:Name="tbAmount" Text="43.21" Foreground="Black" FontSize="{StaticResource amountSize}" FontWeight="Bold" BorderThickness="0" InputScope="Number" Margin="-10,0,0,0"/>
+						<TextBox x:Name="tbAmount" Text="43.21" Foreground="Black" FontSize="{StaticResource amountSize}" FontWeight="Bold" BorderThickness="0" InputScope="Number" Margin="-10,0,0,0" Background="White"/>
 					</StackPanel>
 					<TextBlock x:Name="tbDate" Foreground="{StaticResource settled}" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Center" Margin="0,-10,0,0"/>
 				</StackPanel>
