--- a/Split_It/Add_Expense_Pages/ExpenseUserControl.xaml
+++ b/Split_It/Add_Expense_Pages/ExpenseUserControl.xaml
@@ -640,7 +640,7 @@
 								InputScope="Text" 
 								Hint="Enter Description"
 								BorderThickness="0" Margin="4,0,0,0" />
-                            <StackPanel Orientation="Horizontal" Grid.Row="1">
+                            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,0,0,0">
                                 <telerikInput:RadListPicker
 						            Header="Currency"
 						            BorderThickness="0"
@@ -667,8 +667,12 @@
 									AcceptsReturn="False" 
 									Hint="0.00"
                                     Width="150"
+                                    Padding="0"
                                     KeyDown="tbAmount_KeyDown"
-									InputScope="Number" BorderThickness="0" Margin="40,0,0,0" FontSize="{StaticResource nameSize}"/>
+									InputScope="Number" 
+                                    BorderThickness="0" 
+                                    Margin="40,0,0,0" 
+                                    FontSize="{StaticResource nameSize}"/>
                             </StackPanel>
                         </Grid>
                     </Grid>
