--- a/Split_It/Add_Expense_Pages/ExpenseUserControl.xaml
+++ b/Split_It/Add_Expense_Pages/ExpenseUserControl.xaml
@@ -638,7 +638,7 @@
 								x:Name="tbDescription" 
 								AcceptsReturn="False" 
 								InputScope="Text" 
-								Hint="Enter Description"
+								Hint="enter description"
 								BorderThickness="0" Margin="4,0,0,0" />
                             <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,0,0,0">
                                 <telerikInput:RadListPicker
@@ -801,7 +801,7 @@
 				BorderThickness="0"
                 InputScope="Text"
 				Foreground="Black" 
-				Watermark="Enter additional details" 
+				Watermark="enter additional details" 
 				AcceptsReturn="True" 
 				TextWrapping="Wrap" 
 				Padding="10"
