--- a/Split_It/UserControls/ExpenseUserControl.xaml
+++ b/Split_It/UserControls/ExpenseUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Split_It_.Add_Expense_Pages.ExpenseUserControl"
+﻿<UserControl x:Class="Split_It_.UserControls.ExpenseUserControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
