--- a/Split_It/UserControls/AdControl.xaml
+++ b/Split_It/UserControls/AdControl.xaml
@@ -10,11 +10,12 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
+    Loaded="UserControl_Loaded"
     d:DesignHeight="80" d:DesignWidth="480">
 
     <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneChromeBrush}">
 
-        <UI:AdControl ApplicationId="test_client" AdUnitId="Image480_80" Name="MSAdControl" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="0" Height="80" Width="480"/>
+        <UI:AdControl ApplicationId="1234" AdUnitId="1234" Name="MSAdControl" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="0" Height="80" Width="480"/>
         <adduplex:AdControl x:Name="AdDuplexAdControl" AppId="104211"  Width="480" Height="80" Visibility="Collapsed"/>
     </Grid>
 </UserControl>
